@@ -13,21 +13,19 @@
   </div>
 {% endif %}
 
-{% if 1 %}
-    {% for field in form %}
-    {% for error in field.errors %}{{ error }}{% endfor %}
+{% if form_display_mode_table %}
+    {% for field in form.hidden_fields %}
+        {{ field }}
     {% endfor %}
-    <div id="wrapper" class="wat-cf" style="border: 1px solid red;">
-    {% for field in form %}
-        <div class="group" style="float: left;">
-            {% if field.errors %}<div class="fieldWithErrors">{% endif %}
-            {#<label class="label">{{ field.label_tag }}{% if field.field.required and not read_only %} ({% trans 'required' %}){% endif %}</label>#}
-            {% if field.errors %}<span class="error">{% for error in field.errors %}{{ error }}{% if not forloop.last %} | {% endif %}{% endfor %}</span></div>{% endif %} 
-            <div style="padding: 10px;">{{ field }}</div>
-            {% if field.help_text %}<span class="description">{{ field.help_text }}</span>{% endif %}
-        </div>
+    <tr class="{% cycle 'odd' 'even2' %}">
+    {% for field in form.visible_fields %}
+            <td title="{% if field.errors %}{% for error in field.errors %}{{ error }}{% if not forloop.last %} | {% endif %}{% endfor %}{% else %}{{ field.help_text }}{% endif %}">
+            {% if field.errors %}<div class="flash"><div class="error">{% endif %}
+              {{ field }}
+            {% if field.errors %}</div></div>{% endif %}
+            </td>
     {% endfor %} 
-    </div>
+    </tr>
 {% else %}
     {% for field in form %}
         <div class="group">
