@@ -10,9 +10,12 @@ from models import PurchaseRequest, PurchaseRequestItem, PurchaseOrder, \
 
 
 class PurchaseRequestForm_view(DetailForm):
+    def __init__(self, *args, **kwargs):
+        super(PurchaseRequestForm_view, self).__init__(*args, **kwargs)    
+        
     class Meta:
         model = PurchaseRequest
-
+    
 
 class PurchaseRequestItemForm(forms.ModelForm):
     class Meta:
@@ -29,24 +32,16 @@ class PurchaseOrderItemForm(forms.ModelForm):
         model = PurchaseOrderItem
      
 
-class PRIMakePOIForm(forms.Form):
+class PurchaseOrderWizardItemForm(forms.Form):
     def __init__(self, *args, **kwargs):
-        #item_template = kwargs.pop('item_template', None)        
-        super(PRIMakePOIForm, self).__init__(*args, **kwargs)
-        if 'item_template' in self.initial:
-        #    self.fields['template_id'].value = item_template.id
-            self.fields['name'].initial = self.initial['item_template']
-            self.fields['name'].show_hidden_initial = True
-        #    #self.fields['suppliers'].choices = item_template.item_template.suppliers.all()
-            #self.fields['suppliers'].choices = (('a','a'), ('b','b'))
-            self.fields['suppliers'].choices = self.initial['item_template'].suppliers.all().values_list('id', 'name')
+        super(PurchaseOrderWizardItemForm, self).__init__(*args, **kwargs)
+        if 'item' in self.initial:
+            self.fields['template_id'].initial = self.initial['item'].item_template.id
+            self.fields['name'].initial = self.initial['item'].item_template
+            self.fields['supplier'].choices = self.initial['item'].item_template.suppliers.all().values_list('id', 'name')
+            self.fields['qty'].initial = self.initial['item'].qty
 
-    #item = models.ForeignKey(
-    template_id = forms.CharField()
+    template_id = forms.CharField(widget=forms.HiddenInput)
     name = forms.CharField(label=_(u'Name'))
-    suppliers = forms.ChoiceField()
-    qty = forms.CharField()
-#    model_field = forms.CharField(label=_(u'Model field'))
-#    expression = forms.CharField(label=_(u'Expression'))
-#    arguments = forms.CharField(label=_(u'Arguments'), required=False)
-#    enabled = forms.BooleanField(label=_(u'Enabled'), required=False)
+    supplier = forms.ChoiceField(label=_(u'Suppliers'))
+    qty = forms.CharField(label=_(u'Qty'))
